Annotations for confidential checker